# kontacto

./: .codespellrc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  QUICKSTART.md  README.md  black.toml  mypy.ini  pyproject.toml
kontacto/: __init__.py  main.py
kontacto/commands/: __init__.py  base_command.py  builtin_commands.py  command_registry.py  contact_commands.py  note_commands.py  tag_commands.py
kontacto/models/: __init__.py  base.py  contact.py  note.py
kontacto/repositories/: __init__.py  base_repository.py  contact_repository.py  note_repository.py
kontacto/ui/: __init__.py  command_completer.py  console.py
kontacto/utils/: __init__.py  fuzzy_matcher.py  validators.py
personal_assistant/: __init__.py  main.py
personal_assistant/commands/: __init__.py  base_command.py  contact_commands.py
personal_assistant/models/: __init__.py  base.py  note.py
personal_assistant/repositories/: base_repository.py  note_repository.py
personal_assistant/ui/: __init__.py  console.py
personal_assistant/utils/: __init__.py  fuzzy_matcher.py
tests/: __init__.py  test_cli_behavior.py  test_contact.py  test_integration.py  test_main_app.py  test_note.py  test_validators.py
