[tool.poetry]
name = "kontacto"
version = "1.0.0"
description = "A command-line Personal Assistant for managing contacts and notes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "personal_assistant" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
colorama = "^0.4.6"
tabulate = "^0.9.0"
prompt-toolkit = "^3.0.43"
faker = "^20.1.0"
rapidfuzz = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
assistant = "personal_assistant.main:main" 